--- a/style.css
+++ b/style.css
@@ -44,15 +44,40 @@ ul
     display: block;
     padding: 0 30px;
     opacity: 1;
+    position: fixed;
+    left: 270px;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 0;
+    overflow-y: auto;
+    overflow-x: hidden;
+    transition: all 0.3s ease;
+}
+.section.back-section
+{
+    z-index: 1;
+}
+.section.active
+{
+    z-index: 2;
+    opacity: 1;
+    animation: slideSection 1s ease;
+}
+@keyframes slideSection
+{
+    0%
+    {
+        transform: translateX(100%);
+    }
+    100%
+    {
+        transform: translateX(0%);
+    }
 }
 .hidden
 {
     display: none !important;
-}
-.main-content
-{
-    padding-left: 270px;
-
 }
 .padd-15
 {
@@ -148,6 +173,7 @@ ul
     justify-content: center;
     align-items: center;
     z-index: 10;
+    transition: all 0.3s ease;
 }
 .aside .logo
 {
@@ -206,6 +232,7 @@ ul
     display: none;
     align-items: center;
     justify-content: center;
+    transition: all 0.3s ease;
 }
 .aside .nav-toggler span
 {
@@ -214,6 +241,10 @@ ul
     background: var(--skin-color);
     display: inline-block;
     position: relative;
+}
+.aside .nav-toggler.open span 
+{
+    background: transparent;
 }
 .aside .nav-toggler span::before
 {
@@ -225,6 +256,11 @@ ul
     top: -6px;
     left: 0; 
 }
+.aside .nav-toggler.open span::before
+{
+    transform: rotate(45deg);
+    top: 0;
+}
 .aside .nav-toggler span::after
 {
     content: '';
@@ -234,6 +270,11 @@ ul
     position: absolute;
     top: 6px;
     left: 0; 
+}
+.aside .nav-toggler.open span::after
+{
+    transform: rotate(-45deg);
+    top: 0;
 }
 .aside .nav
 {
@@ -280,7 +321,7 @@ h3.hello
 }
 h3.hello span
 {
-    font-family: 'Clicker  Script', cursive;
+    font-family: 'Clicker Script' , cursive;
     font-size: 30px;
     font-weight: 700;
     color: var(--skin-color);
@@ -396,7 +437,6 @@ h3.my-profession
 }
 .about .about-content .personal-info .buttons .btn 
 {
-    margin-right: 15px;
     margin-top: 10px;
 }
 .about .about-content .skills
@@ -745,13 +785,34 @@ main.portfolio-list {
 }
 @media (max-width: 1199px)
 {
+    .section .container 
+    {
+        padding-top: 70px;
+    }
     .aside
     {
         left: -270px;
     }
-    .main-content
+    .aside.open
     {
-        padding-left: 0;
+        left: 0;
+    }
+    .aside .nav-toggler
+    {
+        display: flex;
+        left: 30px;
+    }
+    .aside .nav-toggler.open 
+    {
+        left: 300px;
+    }
+    .section
+    {
+        left: 0;
+    }
+    .section.open 
+    {
+        left: 270px;
     }
     .about .about-content .personal-info .info-item p span
     {
